Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="paket-group">
           <label><input type="checkbox" id="kilat"> Kilat-8J</label>
           <button type="button" class="paket-btn" data-hari="1" id="cling">Cling-1H</button>
-          <button type="button" class="paket-btn" data-hari="2" id="hemat2">Hema-2H</button>
+          <button type="button" class="paket-btn" data-hari="2" id="hemat2">Hemat-2H</button>
           <button type="button" class="paket-btn" data-hari="3" id="hemat3">Hemat-3H</button>
         </div>
       </div>
